# include-doc

./: Cargo.toml  README.md
.github/workflows/: tests.yml
example/: Cargo.toml
example/examples/: my_example.rs
example/src/: doc_with_example.rs  doc_with_tests.rs  lib.rs
example/tests/: doc.rs
src/: lib.rs
