[package]
name = "include-doc"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Include examples in your Rustdocs."
keywords = ["documentation", "examples", "rustdoc"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.86"
quote = "1.0.15"
proc-macro-error = "1.0.4"
ra_ap_syntax = "0.0.149"
itertools = "0.10.5"
proc-macro2 = "1.0.50"
