[package]
name = "include-doc"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Include examples in your Rustdocs."
keywords = ["documentation", "examples", "rustdoc"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.26"
quote = "1.0.15"
proc-macro-error = "1.0.4"
ra_ap_syntax = "0.0.164"
itertools = "0.11.0"
proc-macro2 = "1.0.50"
