[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
homepage = "https://github.com/simon-bourne/include-doc"
repository = "https://github.com/simon-bourne/include-doc"

[workspace.dependencies]
include-doc-macro = { version = "0.2.1", path = "packages/include-doc-macro" }

syn = "2.0.26"
quote = "1.0.15"
ra_ap_syntax = "0.0.164"
itertools = "0.11.0"
proc-macro2 = "1.0.50"
xtask-base = { git = "https://github.com/simon-bourne/rust-xtask-base" }
